--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Francis Ochoada Website
+title: Francis Ochaoda Website
 email: fochoada@gmu.edu
-description: This website is made for GMU IT 304 and subsequent assignments related to the class. 
->- # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: @GeorgeMasonU
+twitter_username: GeorgeMasonU
 github_username:  fochoada
 
 # Build settings
